soundmeter eingeführt der es ermöglicht die amplitude auszulesen

--- a/SleepMonitor/res/values/strings.xml
+++ b/SleepMonitor/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="stopRecording">Stop Recording</string>
     <string name="playRecord">Play Record</string>
     <string name="stopPlayback">Stop Playback</string>
+    <string name="analyze">Analyze</string>
 
 </resources>
