app hat jetzt einen foreground service der es erlaubt das recording zu beenden und dann gleich zu den recorddetails dieses records springt

--- a/SleepMonitor/res/values/strings.xml
+++ b/SleepMonitor/res/values/strings.xml
@@ -32,5 +32,6 @@
         <item>Volume Data and Record File</item>
     </string-array>
         <string name="whatToRecord">What shall be recorded:</string>
+        <string name="recording">Recording...</string>
 
 </resources>
