hinzugefügt: statische anzeige eines dial charts. muss noch dynamisch als "Tacho" für die umgebungslautstärke umgeändert werden

--- a/SleepMonitor/res/values/strings.xml
+++ b/SleepMonitor/res/values/strings.xml
@@ -56,5 +56,6 @@
         <string name="rewind">RR</string>
         <string name="fastForward">FF</string>
         <string name="pause">Pause</string>
+        <string name="noiseMeter">Noise Meter</string>
 
 </resources>
