layout geändert zu swpie tabs

--- a/SleepMonitor/res/values/strings.xml
+++ b/SleepMonitor/res/values/strings.xml
@@ -55,5 +55,6 @@
         <string name="fastForward">FF</string>
         <string name="pause">Pause</string>
         <string name="noiseMeter">Noise Meter</string>
+        <string name="noRecords">There are no records</string>
 
 </resources>
