--- a/SleepMonitor/res/values/strings.xml
+++ b/SleepMonitor/res/values/strings.xml
@@ -59,5 +59,7 @@
         <string name="deleteUserData">Delete User Data</string>
         <string name="fromInterval">Between:</string>
         <string name="toInterval">and:</string>
+        <string name="on">On</string>
+        <string name="off">Off</string>
 
 </resources>
