added calibration surrounding (without inner logic)

--- a/SleepMonitor/res/values/strings.xml
+++ b/SleepMonitor/res/values/strings.xml
@@ -61,5 +61,6 @@
         <string name="toInterval">and:</string>
         <string name="on">On</string>
         <string name="off">Off</string>
+        <string name="calibrate">Calibrate</string>
 
 </resources>
